# c-chatroom

./: README.md
client/: CMakeLists.txt  client.c  client_api.c  main.c
server/: CMakeLists.txt  main.c  model.c  server.c
